[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
sscanf = "0.4.1"
indexmap = "2.1.0"
palette = { version = "0.7.3", features = ["named"] }
colored = "2.1.0"
